# crossroad-fhir-link

./: .gitignore  .vercelignore  README.md  index.html  tailwind.config.ts
prototype/: README.md  pyproject.toml
prototype/examples/reports/: australia_local_1.txt  australia_local_2.txt  australia_local_3.txt  australia_local_4.txt  eu_diabetes_report.txt  europe_local_1.txt  europe_local_2.txt  europe_local_3.txt  europe_local_4.txt  india_diabetes_report.txt  india_local_1.txt  india_local_2.txt  india_local_3.txt  india_local_4.txt  india_local_terms_report.txt  relay_australia_to_europe.txt  relay_europe_to_india.txt  relay_india_to_usa.txt  relay_usa_to_australia.txt  usa_diabetes_report.txt  usa_local_1.txt  usa_local_2.txt  usa_local_3.txt  usa_local_4.txt
prototype/src/ips_agent/: __init__.py  api.py  cli.py  explainer.py  extractor.py  fhir_terminology.py  ips_builder.py  models.py  pipeline.py  profiles.py  submission_pack.py  terminology.py  validator.py
prototype/src/ips_agent/federated/: __init__.py  data.py  linker.py  training.py
prototype/tests/: test_federated.py  test_pipeline.py
scripts/: build_architecture_one_page_rank_one.py  build_clinical_review_packet.py  build_demo_video.py  build_submission_pdfs.py  capture_external_terminology_validation.py
src/: index.css
submission/: README.md  architecture_one_page.md  click-test-audit.json  clinical_review_checklist.csv  demo_script.md  elevenlabs_narration.txt  elevenlabs_v3_tagged_script.txt  external_terminology_validation.json  federated_benchmark.json  federated_multiseed_benchmark.json  (+8 more)
(+18 files in other folders)
