[project]
name = "hl7-ips-agent"
version = "0.1.0"
description = "Cross-border HL7 FHIR IPS multi-agent prototype with genuine FedAvg terminology linking."
requires-python = ">=3.10"
dependencies = ["torch>=2.0", "fastapi>=0.110", "uvicorn[standard]>=0.27"]

[project.scripts]
ips-agent = "ips_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
